# fitnessllm-dataplatform

./: .actrc  .codecov.yaml  .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.app  Dockerfile.base  Dockerfile.firebase-emulator  Makefile  README.md  build_and_push.sh  cloudbuild.yaml  docker-compose.test.yml  docker-compose.yml  enums.py  firebase.json  firestore.rules  pyproject.toml  pytest.ini  run_tests.sh
.devcontainer/: devcontainer.json
.github/actions/copy-shared/: action.yaml
.github/workflows/: artifact-cleanup.yaml  ci.yaml  deploy-cloud-functions.yml  dev-deploy-cloud-functions.yml  dev-deploy-cloud-run.yaml  dev-deploy.yaml  docker-build.yaml
cloud_functions/: requirements.txt
cloud_functions/api_router/: Dockerfile  main.py  requirements.txt
cloud_functions/api_router/utils/: cloud_utils.py  logger_utils.py
cloud_functions/shared/: cloud_utils.py  logger_utils.py  task_utils.py
cloud_functions/strava_auth_initiate/: Dockerfile  main.py  requirements.txt
cloud_functions/strava_auth_initiate/entities/: constants.py
cloud_functions/strava_auth_initiate/utils/: logger_utils.py  task_utils.py
cloud_functions/token_refresh/: Dockerfile  __init__.py  main.py  pytest.ini  requirements.txt  test_main.py
cloud_functions/token_refresh/entities/: constants.py
cloud_functions/token_refresh/streams/: strava.py
cloud_functions/token_refresh/tests/: conftest.py  test_main.py
cloud_workflow/: workflow.yaml
entities/: enums.py
fitnessllm-dataplatform/entities/: enums.py
fitnessllm_dataplatform/: batch_handler.py  http_handler.py  task_handler.py
fitnessllm_dataplatform/entities/: dataclasses.py  enums.py  mapping.py  queries.py
fitnessllm_dataplatform/infrastructure/: FirebaseConnect.py  RedisConnect.py
fitnessllm_dataplatform/services/: api_interface.py  etl_interface.py
fitnessllm_dataplatform/utils/: cloud_utils.py  logging_utils.py  query_utils.py  request_utils.py  task_utils.py
stream/strava/: cloud_utils.py  etl_utils.py  request_utils.py
tests/cloud_functions/: conftest.py  testing_utils.py
tests/cloud_functions/api_router/: test_main.py
tests/utils/: test_cloud_utils.py  test_logger_utils.py  test_task_utils.py
utils/: cloud_utils.py  logging_utils.py
(+33 files in other folders)
