[tool.poetry]
name = "fitnessllm_dataplatform"
version = "0.1.0"
description = ""
authors = ["Santosh Gummidipundi"]

[tool.poetry.dependencies]
python = "3.12.2"
cloudpathlib = {extras = ["gs"], version = "^0.20.0"}
typing-extensions = "^4.12.2"
fire = "^0.7.0"
google-cloud-secret-manager = "^2.22.1"
pandas = "^2.2.3"
numpy = "^2.2.2"
tqdm = "^4.67.1"
pandas-gbq = "^0.26.1"
api-dev = {path = "../api_dev", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
