[project]
name = "fitnessllm_dataplatform"
version = "0.1.0"
description = ""
authors = [
    { name = "Santosh G", email = "santosh@santoshg.io" }
]

[tool.poetry.dependencies]
python = "3.12.2"
cloudpathlib = {extras = ["gs"], version = "^0.20.0"}
typing-extensions = "^4.12.2"
fire = "^0.7.0"
google-cloud-secret-manager = "^2.22.1"
tqdm = "^4.67.1"
api-dev = {path = "../api_dev", develop = true}
numpy = "^2.2.2"
pandas = "^2.2.3"
google-cloud-bigquery = {extras = ["pandas"], version = "^3.29.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
